@@ -1063,14 +1063,18 @@ It's a function
   when the loop is usually terminated with \keyword{break}).
 \end{funcdesc}
 
-\begin{funcdesc}{zip}{seq1, \moreargs}
+\begin{funcdesc}{zip}{\optional{seq1, \moreargs}}
   This function returns a list of tuples, where the \var{i}-th tuple contains
-  the \var{i}-th element from each of the argument sequences.  At
-  least one sequence is required, otherwise a \exception{TypeError} is
-  raised.  The returned list is truncated in length to the length of
+  the \var{i}-th element from each of the argument sequences.
+  The returned list is truncated in length to the length of
   the shortest argument sequence.  When there are multiple argument
   sequences which are all of the same length, \function{zip()} is
   similar to \function{map()} with an initial argument of \code{None}.
   With a single sequence argument, it returns a list of 1-tuples.
+  With no arguments, it returns an empty list.
   \versionadded{2.0}
+
+  \versionchanged[Formerly, \function{zip()} required at least one argument
+  and \code{zip()} raised a \exception{TypeError} instead of returning
+  \code{[]}]{2.4} 
 \end{funcdesc}
