@@ -1126,7 +1126,8 @@ class BuiltinTest(unittest.TestCase):
                 if i < 0 or i > 2: raise IndexError
                 return i + 4
         self.assertEqual(zip(a, I()), t)
-        self.assertRaises(TypeError, zip)
+        self.assertEqual(zip(), [])
+        self.assertEqual(zip(*[]), [])
         self.assertRaises(TypeError, zip, None)
         class G:
             pass
