@@ -12,6 +12,9 @@ What's New in Python 2.4 alpha 1?
 Core and builtins
 -----------------
 
+- zip() with no arguments now returns an empty list instead of raising
+  a TypeError exception.
+
 Extension modules
 -----------------
 
